# axum-sqlx-postgres-starter

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs
src/infra/: app_state.rs  config.rs  db.rs  mod.rs  tracing.rs
